--- a/src/test/resources/jdbc.properties
+++ b/src/test/resources/jdbc.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3306/wsptest?Unicode=true&amp;characterEncoding=utf8
+url=jdbc:mysql://127.0.0.1:3306/tools?useUnicode=true&amp;characterEncoding=utf8
 username=root
 password=root
 #定义初始连接数
